<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textColor="@color/clr2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:singleLine="true"
        android:text="@string/name"
        android:textColor="@color/clr2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_BD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:text="@string/bd"
        android:textColor="@color/clr2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_domisili"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_bd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:text="@string/ads"
        android:textColor="@color/clr2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_gnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_domisili"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:singleLine="true"
        android:text="@string/gnd"
        android:textColor="@color/clr2"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/clr1"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/edit_bd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_BD"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:focusable="false"
        android:textAlignment="center"
        android:textColor="@color/clr1"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/edit_domisili"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_domisili"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/clr1"
        android:textSize="13sp" />

    <RadioGroup
        android:id="@+id/radio_gnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_gnd"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        android:padding="13dp">

        <RadioButton
            android:id="@+id/gnd_lk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lk"
            android:textColor="@color/clr2" />

        <RadioButton
            android:id="@+id/gnd_prm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:text="@string/pr"
            android:textColor="@color/clr2" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_smb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_gnd"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/warna1"
        android:text="@string/sbt"
        android:textColor="@color/black"
        android:textSize="20sp" />


</RelativeLayout>
