<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/login_cakung"
        android:textColor="@color/clr2"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textColor="@color/clr2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/psw"
        android:textColor="@color/clr2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/clr1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_psw"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/clr1"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_msk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_psw"
        android:layout_margin="20dp"
        android:backgroundTint="@color/warna1"
        android:text="Masuk"
        android:textColor="@color/black"
        android:textSize="20sp" />


</RelativeLayout>